--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<canvas id="canvas"></canvas>
 		<div class="mt-3">
 			<div>
-				<input type="range" class="form-control-range" min="0" max="255">
+				<input type="range" class="form-control-range" min="0">
 				<a>current image:</a><output></output>
 			</div>
 		</div>
@@ -87,7 +87,6 @@
 		var savebtn2 = document.getElementById('download-button2');
 		var isovalue = document.querySelector('input[type="range"]');
 		var output = document.querySelector('output');
-		output.innerHTML = isovalue.value;
 		var id, pixels, pixelMax;
 		var width, height;
 		var middernPic, pixelData, ctx;
@@ -122,8 +121,8 @@
 					
 					dicom2Raw.concatnate(()=>{
 
-						// console.log(dicom2Raw);
-						// console.log(dicom2Raw.cloneSeries.images[0].getImageType());
+						console.log(dicom2Raw);
+						console.log(dicom2Raw.cloneSeries.images[0].getImageType());
 						// console.log('getdim : ', dimension);
 						document.getElementById('info').innerText = '讀取成功';
 						savebtn.setAttribute('class', 'my-btn allow');
@@ -222,7 +221,7 @@
 		}
 		savebtn.addEventListener('click', function(e){
 			// var blob = new Blob([dicom2Raw.rawData], {type: "image/x-panasonic-raw"});
-			// var filename = 'CorCTA_512_512_51_uint16';
+			var filename = 'CorCTA_512_512_51';
 			// // var filename = document.getElementById('file-name'); 
 			// var a = document.createElement('a'); 
 			// var url = URL.createObjectURL(blob); 
@@ -230,8 +229,9 @@
 			// a.href = url; 
 			// a.download = filename; 
 			// a.click();
-
-			var filename = document.getElementById('file-name').value;
+			// if (document.getElementById('file-name').value != null) {
+			// 	filename = document.getElementById('file-name').value;
+			// }
 			Dicom2Raw.downloadData(
 				filename + '_uint8.raw',
 				new Uint8Array(new Uint16Array(dicom2Raw.rawData))
@@ -239,7 +239,11 @@
 		});
 
 		savebtn2.addEventListener('click', function(e){
-			var filename = document.getElementById('file-name').value;
+			var filename = 'CorCTA_512_512_51';
+			// console.log(document.getElementById('file-name').value);
+			// if (document.getElementById('file-name').value != null) {
+			// 	filename = document.getElementById('file-name').value;
+			// }
 			Dicom2Raw.downloadData(
 				filename + '_uint16.raw',
 				dicom2Raw.rawData
@@ -247,9 +251,9 @@
 		});
 
 		isovalue.addEventListener('input', function(e){
-			output.innerHTML = isovalue.value;
-
+			
 			if (document.getElementById('info').innerText == '讀取成功') {
+				output.innerHTML = isovalue.value;
 				createImage();
 			}
 		});
